updated industry colunm from claims to number_of_persons

--- a/Explore_&Clean_Employee_Statistics.ipynb
+++ b/Explore_&Clean_Employee_Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.362763Z",
@@ -142,7 +142,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.377765Z",
@@ -192,7 +192,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:41.252407Z",
@@ -221,7 +221,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:43.202212Z",
@@ -258,7 +258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.218485Z",
@@ -284,7 +284,7 @@
        "62"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:47.315353Z",
@@ -436,7 +436,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:15:08.498468Z",
@@ -472,7 +472,7 @@
        "(2080, 11)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:01.735681Z",
@@ -586,7 +586,7 @@
        "4  2015      5  141525.0  All employees  2015-5"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "4  2015      5  141525.0  All employees  2015-5  all_employees"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "      <th>year</th>\n",
        "      <th>month</th>\n",
        "      <th>industry</th>\n",
-       "      <th>claims</th>\n",
+       "      <th>number_of_persons</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -825,15 +825,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     date  year  month       industry    claims\n",
-       "0  2015-1  2015      1  all_employees  140568.0\n",
-       "1  2015-2  2015      2  all_employees  140839.0\n",
-       "2  2015-3  2015      3  all_employees  140910.0\n",
-       "3  2015-4  2015      4  all_employees  141194.0\n",
-       "4  2015-5  2015      5  all_employees  141525.0"
+       "     date  year  month       industry  number_of_persons\n",
+       "0  2015-1  2015      1  all_employees           140568.0\n",
+       "1  2015-2  2015      2  all_employees           140839.0\n",
+       "2  2015-3  2015      3  all_employees           140910.0\n",
+       "3  2015-4  2015      4  all_employees           141194.0\n",
+       "4  2015-5  2015      5  all_employees           141525.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,10 +843,10 @@
     "df=df.rename(\n",
     "    columns = {\n",
     "        'Month':'month',\n",
-    "        'value':'claims'\n",
+    "        'value':'number_of_persons'\n",
     "        })\n",
     "\n",
-    "final_df = df[['date','year','month','industry','claims']]\n",
+    "final_df = df[['date','year','month','industry','number_of_persons']]\n",
     "final_df.head()"
    ]
   },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,14 +1022,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Push to SQLite\n",
-    "engine = create_engine('sqlite:///data/industry_data.db', echo=False)\n",
-    "final_df.to_sql('austinAccidents',con=engine,if_exists='replace')"
+    "engine = create_engine('sqlite:///Resources/Industry_Data.db', echo=False)\n",
+    "final_df.to_sql('industry_data',con=engine,if_exists='replace')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
