Adding code for generating charts on second tableau dashboard

--- a/Explore_&_Clean_Labor_Statistics.ipynb
+++ b/Explore_&_Clean_Labor_Statistics.ipynb
@@ -268,21 +268,21 @@
     {
      "data": {
       "text/plain": [
-       "series_id           1300\n",
-       "year                1300\n",
-       "value               1300\n",
-       "Month               1300\n",
-       "lfst_code           1300\n",
-       "periodicity_code    1300\n",
-       "series_title        1300\n",
-       "activity_code       1300\n",
-       "ages_code           1300\n",
-       "class_code          1300\n",
-       "duration_code       1300\n",
-       "education_code      1300\n",
-       "entr_code           1300\n",
-       "expr_code           1300\n",
-       "indy_text           1300\n",
+       "series_id           2080\n",
+       "year                2080\n",
+       "value               2080\n",
+       "Month               2080\n",
+       "lfst_code           2080\n",
+       "periodicity_code    2080\n",
+       "series_title        2080\n",
+       "activity_code       2080\n",
+       "ages_code           2080\n",
+       "class_code          2080\n",
+       "duration_code       2080\n",
+       "education_code      2080\n",
+       "entr_code           2080\n",
+       "expr_code           2080\n",
+       "indy_text           2080\n",
        "dtype: int64"
       ]
      },
@@ -324,21 +324,21 @@
     {
      "data": {
       "text/plain": [
-       "series_id           1300\n",
-       "year                1300\n",
-       "value               1300\n",
-       "Month               1300\n",
-       "lfst_code           1300\n",
-       "periodicity_code    1300\n",
-       "series_title        1300\n",
-       "activity_code       1300\n",
-       "ages_code           1300\n",
-       "class_code          1300\n",
-       "duration_code       1300\n",
-       "education_code      1300\n",
-       "entr_code           1300\n",
-       "expr_code           1300\n",
-       "indy_text           1300\n",
+       "series_id           2080\n",
+       "year                2080\n",
+       "value               2080\n",
+       "Month               2080\n",
+       "lfst_code           2080\n",
+       "periodicity_code    2080\n",
+       "series_title        2080\n",
+       "activity_code       2080\n",
+       "ages_code           2080\n",
+       "class_code          2080\n",
+       "duration_code       2080\n",
+       "education_code      2080\n",
+       "entr_code           2080\n",
+       "expr_code           2080\n",
+       "indy_text           2080\n",
        "dtype: int64"
       ]
      },
@@ -365,26 +365,38 @@
     {
      "data": {
       "text/plain": [
-       "LNS13000006    65\n",
-       "LNS13027659    65\n",
-       "LNS13000002    65\n",
+       "LNS13023705    65\n",
        "LNS13000000    65\n",
-       "LNS13000001    65\n",
-       "LNS13027660    65\n",
-       "LNS11000000    65\n",
-       "LNS13000003    65\n",
-       "LNS13027662    65\n",
-       "LNS13032183    65\n",
-       "LNS13000009    65\n",
        "LNS13000036    65\n",
-       "LNS13024230    65\n",
-       "LNS13000091    65\n",
+       "LNS13008516    65\n",
+       "LNS13023621    65\n",
+       "LNS13008396    65\n",
+       "LNS13027660    65\n",
+       "LNS13000001    65\n",
        "LNS13000012    65\n",
-       "LNS13027689    65\n",
-       "LNS13000089    65\n",
-       "LNS13000093    65\n",
-       "LNS11000002    65\n",
+       "LNS13023569    65\n",
+       "LNS11000000    65\n",
+       "LNS13008636    65\n",
+       "LNS13000091    65\n",
+       "LNS13000006    65\n",
        "LNS11000001    65\n",
+       "LNS13027659    65\n",
+       "LNS13024230    65\n",
+       "LNS13008756    65\n",
+       "LNS13000003    65\n",
+       "LNS13000093    65\n",
+       "LNS13027689    65\n",
+       "LNS13032183    65\n",
+       "LNS13023653    65\n",
+       "LNS13026638    65\n",
+       "LNS13000089    65\n",
+       "LNS11000002    65\n",
+       "LNS13000002    65\n",
+       "LNS13027662    65\n",
+       "LNS13026637    65\n",
+       "LNS13000009    65\n",
+       "LNS13025699    65\n",
+       "LNS13008876    65\n",
        "Name: series_id, dtype: int64"
       ]
      },
@@ -444,38 +456,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>count</td>\n",
-       "      <td>1300.000000</td>\n",
-       "      <td>1300.000000</td>\n",
-       "      <td>1300.000000</td>\n",
-       "      <td>1300.000000</td>\n",
-       "      <td>1300.0</td>\n",
-       "      <td>1300.0</td>\n",
-       "      <td>1300.0</td>\n",
-       "      <td>1300.0</td>\n",
-       "      <td>1300.0</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.000000</td>\n",
+       "      <td>2080.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>mean</td>\n",
        "      <td>2017.230769</td>\n",
-       "      <td>17875.998462</td>\n",
+       "      <td>11858.030288</td>\n",
        "      <td>6.230769</td>\n",
-       "      <td>27.000000</td>\n",
+       "      <td>28.125000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>8.468750</td>\n",
+       "      <td>0.062500</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>std</td>\n",
-       "      <td>1.577061</td>\n",
-       "      <td>40307.361619</td>\n",
-       "      <td>3.468851</td>\n",
-       "      <td>7.144177</td>\n",
+       "      <td>1.576833</td>\n",
+       "      <td>32810.385391</td>\n",
+       "      <td>3.468350</td>\n",
+       "      <td>5.831014</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>26.437853</td>\n",
+       "      <td>0.348069</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -486,44 +498,44 @@
        "      <td>10.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25%</td>\n",
        "      <td>2016.000000</td>\n",
-       "      <td>1137.000000</td>\n",
+       "      <td>997.750000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>30.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50%</td>\n",
        "      <td>2017.000000</td>\n",
-       "      <td>1489.500000</td>\n",
+       "      <td>1511.000000</td>\n",
        "      <td>6.000000</td>\n",
        "      <td>30.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>75%</td>\n",
        "      <td>2019.000000</td>\n",
-       "      <td>4413.250000</td>\n",
+       "      <td>3087.250000</td>\n",
        "      <td>9.000000</td>\n",
        "      <td>30.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -534,8 +546,8 @@
        "      <td>30.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>109.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -544,24 +556,24 @@
       ],
       "text/plain": [
        "              year          value        Month    lfst_code  activity_code  \\\n",
-       "count  1300.000000    1300.000000  1300.000000  1300.000000         1300.0   \n",
-       "mean   2017.230769   17875.998462     6.230769    27.000000            0.0   \n",
-       "std       1.577061   40307.361619     3.468851     7.144177            0.0   \n",
+       "count  2080.000000    2080.000000  2080.000000  2080.000000         2080.0   \n",
+       "mean   2017.230769   11858.030288     6.230769    28.125000            0.0   \n",
+       "std       1.576833   32810.385391     3.468350     5.831014            0.0   \n",
        "min    2015.000000     217.000000     1.000000    10.000000            0.0   \n",
-       "25%    2016.000000    1137.000000     3.000000    30.000000            0.0   \n",
-       "50%    2017.000000    1489.500000     6.000000    30.000000            0.0   \n",
-       "75%    2019.000000    4413.250000     9.000000    30.000000            0.0   \n",
+       "25%    2016.000000     997.750000     3.000000    30.000000            0.0   \n",
+       "50%    2017.000000    1511.000000     6.000000    30.000000            0.0   \n",
+       "75%    2019.000000    3087.250000     9.000000    30.000000            0.0   \n",
        "max    2020.000000  164606.000000    12.000000    30.000000            0.0   \n",
        "\n",
-       "       class_code  duration_code  entr_code  expr_code  \n",
-       "count      1300.0         1300.0     1300.0     1300.0  \n",
-       "mean          0.0            0.0        0.0        0.0  \n",
-       "std           0.0            0.0        0.0        0.0  \n",
-       "min           0.0            0.0        0.0        0.0  \n",
-       "25%           0.0            0.0        0.0        0.0  \n",
-       "50%           0.0            0.0        0.0        0.0  \n",
-       "75%           0.0            0.0        0.0        0.0  \n",
-       "max           0.0            0.0        0.0        0.0  "
+       "       class_code  duration_code    entr_code  expr_code  \n",
+       "count      2080.0    2080.000000  2080.000000     2080.0  \n",
+       "mean          0.0       8.468750     0.062500        0.0  \n",
+       "std           0.0      26.437853     0.348069        0.0  \n",
+       "min           0.0       0.000000     0.000000        0.0  \n",
+       "25%           0.0       0.000000     0.000000        0.0  \n",
+       "50%           0.0       0.000000     0.000000        0.0  \n",
+       "75%           0.0       0.000000     0.000000        0.0  \n",
+       "max           0.0     109.000000     2.000000        0.0  "
       ]
      },
      "execution_count": 8,
@@ -622,7 +634,7 @@
       "29378              0             00          0          0  All Industries  \n",
       "29379              0             00          0          0  All Industries  \n",
       "\n",
-      "[1300 rows x 15 columns]\n"
+      "[2080 rows x 15 columns]\n"
      ]
     }
    ],
@@ -641,8 +653,11 @@
      "text": [
       "['LNS11000000' 'LNS11000001' 'LNS11000002' 'LNS13000000' 'LNS13000001'\n",
       " 'LNS13000002' 'LNS13000003' 'LNS13000006' 'LNS13000009' 'LNS13000012'\n",
-      " 'LNS13000036' 'LNS13000089' 'LNS13000091' 'LNS13000093' 'LNS13024230'\n",
-      " 'LNS13027659' 'LNS13027660' 'LNS13027662' 'LNS13027689' 'LNS13032183']\n"
+      " 'LNS13000036' 'LNS13000089' 'LNS13000091' 'LNS13000093' 'LNS13008396'\n",
+      " 'LNS13008516' 'LNS13008636' 'LNS13008756' 'LNS13008876' 'LNS13023569'\n",
+      " 'LNS13023621' 'LNS13023653' 'LNS13023705' 'LNS13024230' 'LNS13025699'\n",
+      " 'LNS13026637' 'LNS13026638' 'LNS13027659' 'LNS13027660' 'LNS13027662'\n",
+      " 'LNS13027689' 'LNS13032183']\n"
      ]
     }
    ],
@@ -956,7 +971,7 @@
       "29378  2020      4    1438.0  (Seas) Unemployment Level - Asian  2020-4\n",
       "29379  2020      5    1493.0  (Seas) Unemployment Level - Asian  2020-5\n",
       "\n",
-      "[1300 rows x 5 columns]\n"
+      "[2080 rows x 5 columns]\n"
      ]
     }
    ],
@@ -1014,7 +1029,7 @@
       "29378  2020-4  \n",
       "29379  2020-5  \n",
       "\n",
-      "[1300 rows x 5 columns]\n"
+      "[2080 rows x 5 columns]\n"
      ]
     },
     {
@@ -1055,7 +1070,19 @@
       " '(Seas) Unemployment Level - 25-34 yrs.'\n",
       " '(Seas) Unemployment Level - 35-44 yrs.'\n",
       " '(Seas) Unemployment Level - 45-54 yrs.'\n",
+      " '(Seas) Number Unemployed for Less than 5 Weeks'\n",
+      " '(Seas) Number Unemployed for 15 Weeks & over'\n",
+      " '(Seas) Number Unemployed for 27 Weeks & over'\n",
+      " '(Seas) Number Unemployed for 5-14 Weeks'\n",
+      " '(Seas) Number Unemployed for 15-26 Weeks'\n",
+      " '(Seas) Unemployment Level - New Entrants'\n",
+      " '(Seas) Unemployment Level - Job Losers'\n",
+      " '(Seas) Unemployment Level - Job Losers on Layoff'\n",
+      " '(Seas) Unemployment Level - Job Leavers'\n",
       " '(Seas) Unemployment Level - 55 yrs. & over'\n",
+      " '(Seas) Unemployment Level - Job Losers Not on Layoff'\n",
+      " '(Seas) Unemployment Level - Persons who Completed Temporary Jobs'\n",
+      " '(Seas) Unemployment Level - Permanent Job Losers'\n",
       " '(Seas) Unemployment Level - Less than a High School Diploma, 25 yrs. & over'\n",
       " '(Seas) Unemployment Level - High School Graduates, No College, 25 yrs. & over'\n",
       " \"(Seas) Unemployment Level - Bachelor's degree and higher, 25 yrs. & over\"\n",
@@ -1101,6 +1128,18 @@
     "                                  \"(Seas) Unemployment Level - 25-34 yrs.\":\"25-34\",\n",
     "                                  \"(Seas) Unemployment Level - 35-44 yrs.\":\"35-44\",\n",
     "                                  \"(Seas) Unemployment Level - 45-54 yrs.\":\"45-54\",\n",
+    "                                  \"(Seas) Unemployment Level - New Entrants\":\"new_entrants\",\n",
+    "                                  \"(Seas) Unemployment Level - Job Losers\":\"job_losers\",\n",
+    "                                  \"(Seas) Unemployment Level - Job Losers on Layoff\":\"job_losers_on_layoff\",\n",
+    "                                  \"(Seas) Unemployment Level - Job Leavers\":\"job_leavers\",\n",
+    "                                  \"(Seas) Unemployment Level - Job Losers Not on Layoff\":\"job_losers_not_on_layoff\",\n",
+    "                                  \"(Seas) Unemployment Level - Persons who Completed Temporary Jobs\":\"persons_completed_temporary_jobs\",\n",
+    "                                  \"(Seas) Unemployment Level - Permanent Job Losers\":\"permanent_job_losers\",\n",
+    "                                  \"(Seas) Number Unemployed for Less than 5 Weeks\":\"unemployed_less_than_5_weeks\",\n",
+    "                                  \"(Seas) Number Unemployed for 5-14 Weeks\":\"unemployed_5-14_weeks\",\n",
+    "                                  \"(Seas) Number Unemployed for 15 Weeks & over\":\"unemployed_15_weeks_and_over\",\n",
+    "                                  \"(Seas) Number Unemployed for 15-26 Weeks\":\"unemployed_15-26_weeks\",\n",
+    "                                  \"(Seas) Number Unemployed for 27 Weeks & over\":\"unemployed_27_weeks_and_over\",\n",
     "                                  \"(Seas) Unemployment Level - 55 yrs. & over\":\"55_and_over\",\n",
     "                                  \"(Seas) Unemployment Level - Less than a High School Diploma, 25 yrs. & over\":\"less_than_highschool_diploma\",\n",
     "                                  \"(Seas) Unemployment Level - High School Graduates, No College, 25 yrs. & over\":\"highschool_no_college\",\n",
@@ -1131,7 +1170,7 @@
       "29378  2020      4             1438.0              asian  2020-4\n",
       "29379  2020      5             1493.0              asian  2020-5\n",
       "\n",
-      "[1300 rows x 5 columns]\n"
+      "[2080 rows x 5 columns]\n"
      ]
     }
    ],
