--- a/LN  Data.ipynb
+++ b/LN  Data.ipynb
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "(1300, 15)"
+       "(2080, 15)"
       ]
      },
      "execution_count": 9,
@@ -338,7 +338,24 @@
     "    'LNS13027659', # Unemployment Level Less than HS\n",
     "    'LNS13027660', # Unemployment Level HS No college\n",
     "    'LNS13027662', # Unemployment Level Bachelor's degree and higher\n",
-    "    'LNS13027689', # Unemployment Level Some College or Associate Degree   \n",
+    "    'LNS13027689', # Unemployment Level Some College or Associate Degree \n",
+    "     \n",
+    "    'LNS13008396', # Number Unemployed for Less than 5 Weeks\n",
+    "    'LNS13008756', # Number Unemployed for 5-14 Weeks\n",
+    "    'LNS13008516', # Number Unemployed for 15 Weeks & over\n",
+    "    'LNS13008876', # Number Unemployed for 15-26 Weeks\n",
+    "    'LNS13008636', # Number Unemployed for 27 Weeks & over\n",
+    "#    'LNS13008275', # Average Weeks Unemployed\n",
+    "#    'LNS13008276', # Median Weeks Unemployed\n",
+    "    \n",
+    "    'LNS13023569', # Unemployment Level - New Entrants\n",
+    "    'LNS13023621', # Unemployment Level - Job Losers\n",
+    "    'LNS13023653', # Unemployment Level - Job Losers on Layoff\n",
+    "    'LNS13023705', # Unemployment Level - Job Leavers\n",
+    "    'LNS13025699', # Unemployment Level - Job Losers Not on Layoff\n",
+    "    'LNS13026637', # Unemployment Level - Persons who Completed Temporary Jobs\n",
+    "    'LNS13026638', # Unemployment Level - Permanent Job Losers\n",
+    "\n",
     "]    \n",
     "\n",
     "condition =LNS2020DF['series_id'].isin(Series_of_interest) \n",
