--- a/Explore & Clean_Industry Data.ipynb
+++ b/Explore & Clean_Industry Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.362763Z",
@@ -142,7 +142,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,6 @@
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "from datetime import datetime,date\n",
     "from sqlalchemy import create_engine\n",
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.377765Z",
@@ -192,7 +191,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:41.252407Z",
@@ -221,19 +220,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check column names for spaces - looks good\n",
+    "# Check column names for spaces\n",
     "CESDF.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:43.202212Z",
@@ -258,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.218485Z",
@@ -281,22 +280,33 @@
     {
      "data": {
       "text/plain": [
-       "62"
+       "CES6561000001    65\n",
+       "CES7000000001    65\n",
+       "CES4300000010    65\n",
+       "CES4200000010    65\n",
+       "CES8000000001    65\n",
+       "                 ..\n",
+       "CES9092000010    64\n",
+       "CES6056000010    64\n",
+       "CES9093000010    64\n",
+       "CES7071000010    64\n",
+       "CES9091000010    64\n",
+       "Name: series_id, Length: 62, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check series values\n",
-    "CESDF['series_id'].nunique()"
+    "CESDF['series_id'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:47.315353Z",
@@ -436,7 +446,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:15:08.498468Z",
@@ -472,7 +482,7 @@
        "(2080, 11)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:01.735681Z",
@@ -586,7 +596,7 @@
        "4  2015      5  141525.0  All employees  2015-5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
