--- a/Census Data.ipynb
+++ b/Census Data.ipynb
@@ -336,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitpythondatacondaec7e8270480d4d8a925de6dc1659eacb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
